<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="dialog_cancel_button">取消</string>
    <string name="dialog_no_button">否</string>
    <string name="dialog_ok_button">确定</string>
    <string name="dialog_yes_button">是</string>
    <string name="inputkb">按键精灵输入法</string>
    <string name="toast_cloud_root_failed">临时root不通过</string>
    <string name="toast_cloud_root_success">临时root通过</string>
    <string name="toast_engine_crash_then_restart">脚本异常终止</string>
    <string name="toast_engine_no_permission">没有权限</string>
    <string name="toast_failed_got_root">%s 没有获得root权限</string>
    <string name="toast_on_start_script">开始运行</string>
    <string name="toast_on_stop_script">停止运行</string>
    <string name="toast_run_failed">运行异常(%d)</string>
    <string name="toast_script_already_running">已经有脚本在运行中...</string>
    <string name="toast_script_engine_failed_start">脚本运行环境初始化失败</string>
    <string name="toast_starting_script_engine">正在初始化脚本运行环境</string>
    <string name="ui_show_invalid_color_value">无效的颜色值</string>
    <string name="ui_show_negative_button_label">退出</string>
    <string name="ui_show_not_found_float">没有找到 ID为 “%s” 的悬浮窗</string>
    <string name="ui_show_not_found_ui">没有找到 ID为 “%s” 的界面</string>
    <string name="ui_show_not_found_widget">没有找到 ID为 “%s” 的控件</string>
    <string name="ui_show_positive_button_label">继续</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="UMUpdateCheck">2.4.1.20140228</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="account_bind_phone">通过安全手机可快速找回密码</string>
    <string name="account_freeze_message">该账号已被冻结，如需进行相关操作请联系作者处理！</string>
    <string name="account_input_error">账号需为6-18位数字或字母组成</string>
    <string name="account_verify">校验中...</string>
    <string name="account_wrong_format">账号需为6-18位数字或字母组成</string>
    <string name="action_settings">Settings</string>
    <string name="activation_code">注册码激活</string>
    <string name="activation_code_suc">注册码激活成功</string>
    <string name="activation_registration">激活注册码</string>
    <string name="ad_delete_btn">点击关闭 | %d 秒</string>
    <string name="ad_source_mark">%s广告</string>
    <string name="again_account_error">账号输入错误，请重新输入</string>
    <string name="again_input_account">账号需为6-18位数字或字母组成</string>
    <string name="again_input_new_password">新密码需为6-18位数字或字母组成</string>
    <string name="again_input_old_password">原密码输入错误，请重新输入</string>
    <string name="again_input_password">密码需为6-18位数字或字母组成</string>
    <string name="all_photo_mobile">所有的图片</string>
    <string name="apk_generate_time">2019-09-16 15:39</string>
    <string name="apk_size">%1$sMB</string>
    <string name="app_downloading">下载中</string>
    <string name="app_getroot">小精灵已获得ROOT权限</string>
    <string name="app_install">安装</string>
    <string name="app_loading">加载中...</string>
    <string name="app_menu_exit">退出</string>
    <string name="app_name">HG-小牛</string>
    <string name="app_open">启动</string>
    <string name="app_resolution" />
    <string name="app_template_type">收费</string>
    <string name="app_ungetroot">小精灵未获得ROOT权限</string>
    <string name="app_unlogin">小精灵未登陆，不能运行脚本</string>
    <string name="app_update_tips">加入天恩广告，脚本运行浮窗修改</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area_code">+86</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_sure">确定(%1$d)</string>
    <string name="change_password_title">修改密码</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_heartbeat_failed">心跳校验失败</string>
    <string name="check_sign_fail">服务器验证异常</string>
    <string name="check_token_fail">心跳校验失败</string>
    <string name="clear_msg">清空消息</string>
    <string name="click_exit_login_btn">点击退出登录按钮,退出登录</string>
    <string name="clicker_send_codes">请点击发送验证码</string>
    <string name="codes_exception">初始化数据异常，请退出APP重新进入</string>
    <string name="codes_no_match_phone">验证码与手机号码不匹配</string>
    <string name="codes_request_fails">初始化数据请求失败\u0009</string>
    <string name="commit_data_error">提交数据失败,请检查网络！</string>
    <string name="commit_data_running">正在提交数据，您可能需要等一会</string>
    <string name="commit_feedback_info">提交反馈</string>
    <string name="complete_action">完成</string>
    <string name="countdown_time">%d 跳过</string>
    <string name="cpu_core_eight">八核</string>
    <string name="cpu_core_four">四核</string>
    <string name="cpu_core_one">单核</string>
    <string name="cpu_core_sixteen">十六核</string>
    <string name="cpu_core_three">三核</string>
    <string name="cpu_core_two">双核</string>
    <string name="cyjhpay_alipay_notice">支付宝接口调整中，暂时无法使用</string>
    <string name="cyjhpay_loding_list">正在获取列表...请稍后</string>
    <string name="cyjhpay_payment_method">选择支付方式</string>
    <string name="cyjhpay_use_alipay">支付宝支付</string>
    <string name="cyjhpay_use_mmpay">微信支付</string>
    <string name="default_content">\####################</string>
    <string name="deletefloatview_delete">拖到此处隐藏</string>
    <string name="des_decrypt_exception">DES解密错误，请稍候重试</string>
    <string name="description_description">脚本说明</string>
    <string name="devices_info">设备信息</string>
    <string name="devices_is_root">root权限：%1$s</string>
    <string name="devices_name">机型：%1$s</string>
    <string name="devices_no_root">没有root</string>
    <string name="devices_use_system">系统：%1$s</string>
    <string name="devices_yes_root">已root</string>
    <string name="dialog_reset">重试</string>
    <string name="dialog_setting">设置</string>
    <string name="download">下载</string>
    <string name="download_error">下载出错</string>
    <string name="download_prompt">更多免费脚本尽在游戏蜂窝</string>
    <string name="download_ratio_total">%1$s/%2$s</string>
    <string name="download_start">开始下载!请注意顶部状态栏!</string>
    <string name="elfin_appid">0</string>
    <string name="elfin_appinfo" />
    <string name="elfin_script_type" />
    <string name="empty">该辅助暂无设置相关注册码购买信息</string>
    <string name="empty_string" />
    <string name="fast_login">立即登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="input_account_hint">请输入需要找回密码的账号</string>
    <string name="input_new_password">请输入新密码 ( 6-18位数字或字母组成 )</string>
    <string name="input_old_password">请输入原密码 ( 6-18位数字或字母组成 )</string>
    <string name="input_password">请输入密码</string>
    <string name="login_account_hint">请输入账号</string>
    <string name="new_password">请输入新密码</string>
    <string name="official_tips">无法收到验证码或需变更安全手机请联系官方处理</string>
    <string name="optionfragment_getmoretime">获取更多使用时间</string>
    <string name="optionfragment_quitip">该脚本暂无定制界面</string>
    <string name="optionfragment_start">启动浮窗</string>
    <string name="password_restrictions">密码仅允许6-18位数字或字母组合</string>
    <string name="phone_codes">请输入6位数字验证码</string>
    <string name="phone_number">请输入11位手机号</string>
    <string name="please_input_account">请输入账号 ( 6-18位数字或字母组成 )</string>
    <string name="please_input_password">请输入密码 ( 6-18位数字或字母组成 )</string>
    <string name="safe_phone_get_password">通过绑定的安全手机密码找回</string>
    <string name="send_codes">发送验证码</string>
    <string name="setting_call_stop">来电时停止运行脚本</string>
    <string name="setting_floatview_ctrl">虚拟浮窗控制脚本</string>
    <string name="setting_open_run_script">开机启动脚本</string>
    <string name="setting_scriptlog">脚本日志</string>
    <string name="setting_update">检测更新</string>
    <string name="setting_vibration">启停脚本时震动</string>
    <string name="setting_volume_key_ctrl">音量增减控制脚本</string>
    <string name="setting_waggle_stop">启动摇一摇停止脚本</string>
    <string name="step_next">下一步</string>
    <string name="user_feedback_info">用户反馈</string>
    <string name="user_studio">工作室用户</string>
    <string name="word_recognition_library">文字识别库</string>
</resources>