<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray6" android:padding="@dimen/distance_15" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_sp14" android:textColor="@color/blank8" android:gravity="center" android:id="@id/id_tv_bind_phonenumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/distance_15" android:text="@string/safe_phone_get_password" />
    <TextView android:textSize="@dimen/text_sp14" android:textColor="@color/blank6" android:gravity="center" android:id="@id/id_phone_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/distance_10" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/distance_40" android:layout_marginTop="@dimen/distance_32">
        <EditText android:textSize="@dimen/text_sp14" android:textColor="@color/gray8" android:id="@id/id_input_codes" android:background="@drawable/bg_white_box" android:paddingLeft="@dimen/distance_10" android:layout_width="@dimen/distance_180" android:layout_height="fill_parent" android:layout_marginRight="@dimen/distance_20" android:hint="@string/phone_codes" android:singleLine="true" android:maxLength="6" android:drawableLeft="@drawable/img_codes" android:drawablePadding="@dimen/distance_10" android:inputType="number" />
        <Button android:textSize="@dimen/text_sp14" android:id="@id/id_send_codes" android:layout_height="fill_parent" android:text="@string/send_codes" style="@style/button_register" />
    </LinearLayout>
    <Button android:id="@id/btn_step_two" android:layout_marginTop="@dimen/distance_27" android:text="@string/step_next" style="@style/button_register" />
    <TextView android:textSize="@dimen/text_sp14" android:textColor="@color/blank6" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/distance_25" android:text="@string/official_tips" />
</LinearLayout>