<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray6" android:padding="@dimen/distance_15" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/distance_10" android:src="@drawable/img_register_complete" />
    <TextView android:textSize="@dimen/text_sp14" android:textColor="@color/blank8" android:gravity="center" android:id="@id/id_tv_bind_phonenumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/distance_15" android:text="@string/account_bind_phone" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bg_white_box" android:paddingLeft="@dimen/distance_10" android:layout_width="fill_parent" android:layout_height="@dimen/distance_40" android:layout_marginTop="@dimen/distance_25">
        <TextView android:textSize="@dimen/text_sp14" android:textColor="@color/gray8" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/area_code" android:drawableLeft="@drawable/img_phone" android:drawablePadding="@dimen/distance_10" />
        <EditText android:textSize="@dimen/text_sp14" android:textColor="@color/gray8" android:gravity="center_vertical" android:id="@id/id_bind_phone_number" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/distance_10" android:hint="@string/phone_number" android:singleLine="true" android:maxLength="11" android:inputType="phone" />
    </LinearLayout>
    <Button android:id="@id/id_btn_complete" android:layout_marginTop="@dimen/distance_20" android:text="@string/complete_action" style="@style/button_register" />
</LinearLayout>