<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray6" android:padding="@dimen/distance_15" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_sp16" android:textColor="@color/blank6" android:gravity="center" android:id="@id/id_phone_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/distance_18" android:text="@string/new_password" />
    <EditText android:textSize="@dimen/text_sp14" android:textColor="@color/gray8" android:gravity="center_vertical" android:id="@id/id_input_password" android:background="@drawable/bg_white_box" android:paddingLeft="@dimen/distance_10" android:layout_width="fill_parent" android:layout_height="@dimen/distance_40" android:layout_marginTop="@dimen/distance_32" android:hint="@string/password_restrictions" android:singleLine="true" android:maxLength="18" android:drawableLeft="@drawable/img_password" android:drawablePadding="@dimen/distance_10" />
    <Button android:id="@id/id_step_complete" android:layout_marginTop="@dimen/distance_20" android:text="@string/complete_action" style="@style/button_register" />
</LinearLayout>