<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/gray6" android:padding="@dimen/distance_15" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_sp14" android:textColor="@color/blank6" android:gravity="center" android:id="@id/tv_phone_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/distance_18" android:text="@string/input_account_hint" />
    <EditText android:textSize="@dimen/text_sp14" android:textColor="@color/gray8" android:gravity="center_vertical" android:id="@id/et_user_account" android:background="@drawable/bg_white_box" android:paddingLeft="@dimen/distance_10" android:layout_width="fill_parent" android:layout_height="@dimen/distance_40" android:layout_marginTop="@dimen/distance_25" android:hint="@string/please_input_account" android:singleLine="true" android:drawableLeft="@drawable/img_account" android:drawablePadding="@dimen/distance_10" android:layout_below="@id/tv_phone_message" />
    <Button android:id="@id/btn_step_one" android:layout_marginTop="@dimen/distance_27" android:text="@string/step_next" android:layout_below="@id/et_user_account" style="@style/button_register" />
</RelativeLayout>