<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/gray6" android:padding="@dimen/distance_15" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textSize="@dimen/text_sp14" android:textColor="@color/gray8" android:gravity="center_vertical" android:id="@id/et_old_password" android:background="@drawable/bg_white_box" android:paddingLeft="@dimen/distance_10" android:layout_width="fill_parent" android:layout_height="@dimen/distance_40" android:layout_marginTop="@dimen/distance_25" android:hint="@string/input_old_password" android:singleLine="true" android:drawableLeft="@drawable/img_password" android:drawablePadding="@dimen/distance_10" />
    <EditText android:textSize="@dimen/text_sp14" android:textColor="@color/gray8" android:gravity="center_vertical" android:id="@id/et_new_password" android:background="@drawable/bg_white_box" android:paddingLeft="@dimen/distance_10" android:layout_width="fill_parent" android:layout_height="@dimen/distance_40" android:layout_marginTop="@dimen/distance_25" android:hint="@string/input_new_password" android:singleLine="true" android:drawableLeft="@drawable/img_password" android:drawablePadding="@dimen/distance_10" android:layout_below="@id/et_old_password" />
    <Button android:id="@id/btn_complete_operate" android:layout_marginTop="@dimen/distance_27" android:text="@string/complete_action" android:layout_below="@id/et_new_password" style="@style/button_register" />
</RelativeLayout>