<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/ll_option_ui_parent" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ScrollView android:id="@id/scrollview_ui" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/reyt_qui" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_qui" />
                <TextView android:textSize="26.0sp" android:textColor="@color/gray_text" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/optionfragment_quitip" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <Button android:id="@id/btn_option_start" android:background="@drawable/bg_blue_box" android:layout_marginLeft="0.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="0.0dip" android:layout_marginBottom="5.0dip" android:text="@string/optionfragment_start" style="@style/button" />
    <Button android:id="@id/btn_option_getmoretime" android:background="@drawable/bg_orange_box" android:layout_marginLeft="0.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="0.0dip" android:layout_marginBottom="5.0dip" android:text="@string/optionfragment_getmoretime" style="@style/button" />
    <TextView android:textSize="@dimen/text_sp14" android:textColor="@color/blue4" android:id="@id/tv_option_duetime" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</LinearLayout>